--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -56,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/First Build.loader.js";
+      var loaderUrl = buildUrl + "/word-search-staging.loader.js";
       var config = {
-        dataUrl: buildUrl + "/First Build.data.unityweb",
-        frameworkUrl: buildUrl + "/First Build.framework.js.unityweb",
-        codeUrl: buildUrl + "/First Build.wasm.unityweb",
+        dataUrl: buildUrl + "/word-search-staging.data.unityweb",
+        frameworkUrl: buildUrl + "/word-search-staging.framework.js.unityweb",
+        codeUrl: buildUrl + "/word-search-staging.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Word Search",
